# actix-extras

./: .cspell.yml  .editorconfig  .gitignore  .prettierrc.yml  .travis.yml  CHANGELOG.md  CHANGES.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  codecov.yml  crates.js  deny.toml  docker-compose.yml  help.html  index.html  justfile  lcov.info  rustdoc.css  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
actix-amqp/: CHANGES.md  Cargo.toml  README.md
actix-amqp/codec/: Cargo.toml  README.md  build.rs
actix-amqp/codec/codegen/: definitions.rs  mod.rs  specification.json
actix-amqp/codec/src/: errors.rs  framing.rs  io.rs  lib.rs
actix-amqp/codec/src/codec/: decode.rs  encode.rs  lorem.txt  mod.rs
actix-amqp/codec/src/message/: body.rs  inmessage.rs  mod.rs  outmessage.rs
actix-amqp/codec/src/protocol/: definitions.rs  mod.rs
actix-amqp/codec/src/types/: mod.rs  symbol.rs  variant.rs
actix-amqp/src/: cell.rs  connection.rs  errors.rs  hb.rs  lib.rs  rcvlink.rs  sasl.rs  service.rs  session.rs  sndlink.rs
actix-amqp/src/client/: connect.rs  mod.rs  protocol.rs
actix-amqp/src/server/: app.rs  connect.rs  control.rs  dispatcher.rs  errors.rs  handshake.rs  link.rs  message.rs  mod.rs  sasl.rs  service.rs
actix-amqp/tests/: test_server.rs
actix-cors/: CHANGES.md  Cargo.toml  README.md
actix-cors/examples/: cors.rs
actix-cors/src/: all_or_some.rs  builder.rs  error.rs  inner.rs  lib.rs  middleware.rs
actix-cors/tests/: tests.rs
actix-identity/: CHANGES.md  Cargo.toml  README.md
actix-identity/examples/: identity.rs
actix-identity/src/: config.rs  configuration.rs  cookie.rs  error.rs  identity.rs  identity_error.rs  identity_errors.rs  identity_ext.rs  lib.rs  middleware.rs
actix-identity/tests/integration/: fixtures.rs  integration.rs  main.rs  test_app.rs
actix-limitation/: CHANGES.md  Cargo.toml  README.md
actix-limitation/examples/: README.md  scoped_limiters.rs
actix-limitation/src/: builder.rs  errors.rs  lib.rs  middleware.rs  status.rs
actix-limitation/src/core/: builder.rs  errors.rs  mod.rs  status.rs
actix-limitation/src/core/builder/: mod.rs  test.rs
actix-limitation/src/core/errors/: mod.rs
actix-limitation/src/core/status/: mod.rs  test.rs
actix-limitation/src/middleware/: mod.rs
actix-limitation/src/test/: mod.rs
actix-limitation/tests/: mod.rs  tests.rs
actix-mqtt/: CHANGES.md  Cargo.toml  LICENSE-APACHE  README.md
actix-mqtt/codec/: CHANGES.md  Cargo.toml  LICENSE-MIT  README.md
actix-mqtt/codec/src/: error.rs  lib.rs  packet.rs  proto.rs  topic.rs
actix-mqtt/codec/src/codec/: decode.rs  encode.rs  mod.rs
actix-mqtt/examples/: basic.rs
actix-mqtt/src/: cell.rs  client.rs  connect.rs  default.rs  dispatcher.rs  error.rs  lib.rs  publish.rs  router.rs  server.rs  sink.rs  subs.rs
actix-mqtt/tests/: test_server.rs
actix-protobuf/: .travis.yml  CHANGES.md  Cargo.toml  README.md
actix-protobuf/examples/prost-example/: Cargo.toml  client.py
actix-protobuf/src/: lib.rs
actix-redis/: .gitignore  CHANGES.md  Cargo.toml  README.md
actix-redis/examples/: authentication.rs  basic.rs
actix-redis/examples/authentication/: Cargo.toml
actix-redis/examples/basic/: Cargo.toml
actix-redis/src/: cluster.rs  cmd.rs  command.rs  error.rs  lib.rs  redis.rs  session.rs  slot.rs
actix-redis/src/command/: asking.rs  cluster_slots.rs  del.rs  echo.rs  get.rs  ping.rs  set.rs
actix-redis/tests/: test_cluster.rs  test_cluster_down.rs  test_redis.rs
actix-session/: CHANGES.md  Cargo.toml  README.md
actix-session/examples/: authentication.rs  basic.rs
actix-session/src/: _error.rs  config.rs  configuration.rs  context.rs  cookie.rs  error.rs  extractors.rs  lib.rs  middleware.rs  session.rs  session_ext.rs  session_key.rs
actix-session/src/storage/: cookie.rs  dynamo_db.rs  format.rs  interface.rs  mod.rs  redis_actor.rs  redis_rs.rs  session_key.rs  sled.rs  sqlite.rs  utils.rs
actix-session/tests/: middleware.rs  opaque_errors.rs  session.rs
actix-settings/: CHANGES.md  Cargo.toml  README.md
actix-settings/examples/: actix.rs  config.toml
actix-settings/src/: CHANGES.md  actix.rs  core.rs  defaults.toml  error.rs  lib.rs  parse.rs
actix-settings/src/actix/: address.rs  backlog.rs  keep_alive.rs  max_connection_rate.rs  max_connections.rs  mode.rs  num_workers.rs  timeout.rs
actix-settings/src/settings/: address.rs  backlog.rs  keep_alive.rs  max_connection_rate.rs  max_connections.rs  mod.rs  mode.rs  num_workers.rs  timeout.rs  tls.rs
actix-web-httpauth/: .editorconfig  CHANGELOG.md  CHANGES.md  Cargo.toml  README.md
actix-web-httpauth/.github/workflows/: clippy-and-fmt.yml
actix-web-httpauth/examples/: middleware-closure.rs  middleware.rs  with-cors.rs
actix-web-httpauth/examples/middleware/: Cargo.toml
actix-web-httpauth/examples/middleware-closure/: Cargo.toml
actix-web-httpauth/src/: lib.rs  middleware.rs  utils.rs
actix-web-httpauth/src/extractors/: api_key.rs  basic.rs  bearer.rs  config.rs  errors.rs  mod.rs
actix-web-httpauth/src/headers/: mod.rs
actix-ws/: CHANGELOG.md  Cargo.toml  README.md
actix-ws/examples/: chat.html  chat.rs  json.rs
actix-ws/src/: aggregated.rs  codec.rs  fut.rs  lib.rs  session.rs  stream.rs
actix-ws/src/codec/: json.rs
examples/custom-root-span/: Cargo.toml
examples/custom-root-span/src/: main.rs
examples/opentelemetry/: Cargo.toml  README.md
examples/opentelemetry/src/: main.rs
tracing-actix-web/: CHANGELOG.md  Cargo.toml  README.md
tracing-actix-web-opentelemetry/: Cargo.toml  README.md
tracing-actix-web-opentelemetry/src/: lib.rs
tracing-actix-web/.github/workflows/: general.yml
tracing-actix-web/examples/custom-root-span/: Cargo.toml  README.md
tracing-actix-web/examples/opentelemetry/: Cargo.toml  README.md
tracing-actix-web/examples/request-id-response-header/: Cargo.toml
tracing-actix-web/src/: lib.rs  middleware.rs  otel.rs  request_id.rs  root_span.rs  root_span_builder.rs  root_span_macro.rs  trace_context.rs
tracing-actix-web/tests/: trace_context.rs
(+551 files in other folders)
