[package]
name = "actix-cors"
version = "0.6.4"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
description = "Cross-Origin Resource Sharing (CORS) controls for Actix Web"
keywords = ["actix", "cors", "web", "security", "crossorigin"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-extras.git"
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
draft-private-network-access = []

[dependencies]
actix-utils = "3"
actix-web = { version = "4", default-features = false }

derive_more = "0.99.7"
futures-util = { version = "0.3.7", default-features = false }
log = "0.4"
once_cell = "1"
smallvec = "1.6.1"

[dev-dependencies]
actix-web = { version = "4", default_features = false, features = ["macros"] }
env_logger = "0.10"
regex = "1.4"
