[package]
name = "actix-identity"
version = "0.7.0"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Luca Palmieri <rust@lpalmieri.com>",
]
description = "Identity management for Actix Web"
keywords = ["actix", "auth", "identity", "web", "security"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-extras.git"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
actix-service = "2"
actix-session = "0.9"
actix-utils = "3"
actix-web = { version = "4", default-features = false, features = ["cookies", "secure-cookies"] }

derive_more = "0.99.7"
futures-core = "0.3.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
tracing = { version = "0.1.30", default-features = false, features = ["log"] }

[dev-dependencies]
actix-http = "3"
actix-web = { version = "4", default-features = false, features = ["macros", "cookies", "secure-cookies"] }
actix-session = { version = "0.9", features = ["redis-rs-session", "cookie-session"] }

env_logger = "0.10"
reqwest = { version = "0.11", default-features = false, features = ["cookies", "json"] }
uuid = { version = "1", features = ["v4"] }
