[package]
name = "actix-identity"
version = "0.9.0"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Luca Palmieri <rust@lpalmieri.com>",
]
description = "Identity management for Actix Web"
keywords = ["actix", "auth", "identity", "web", "security"]
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
actix-service = "2"
actix-session = "0.11"
actix-utils = "3"
actix-web = { version = "4", default-features = false, features = ["cookies", "secure-cookies"] }

derive_more = { version = "2", features = ["display", "error", "from"] }
futures-core = "0.3.17"
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1.44", default-features = false, features = ["log"] }

[dev-dependencies]
actix-http = "3"
actix-web = { version = "4", default-features = false, features = ["macros", "cookies", "secure-cookies"] }
actix-session = { version = "0.11", features = ["redis-session", "cookie-session"] }

env_logger = "0.11"
reqwest = { version = "0.13", default-features = false, features = ["cookies", "json"] }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
