[package]
name = "actix-limitation"
version = "0.2.0"
authors = [
    "0xmad <0xmad@users.noreply.github.com>",
    "Rob Ede <robjtede@icloud.com>",
]
description = "Rate limiter using a fixed window counter for arbitrary keys, backed by Redis for Actix Web"
keywords = ["actix-web", "rate-api", "rate-limit", "limitation"]
categories = ["asynchronous", "web-programming"]
repository = "https://github.com/actix/actix-extras.git"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
actix-session = "0.7"
actix-utils = "3"
actix-web = { version = "4", default-features = false }

chrono = "0.4"
derive_more = "0.99.5"
log = "0.4"
redis = { version = "0.21", default-features = false, features = ["tokio-comp"] }
time = "0.3"

[dev-dependencies]
actix-web = "4"
static_assertions = "1"
uuid = { version = "1", features = ["v4"] }
