[package]
name = "actix-limitation"
version = "0.4.0"
authors = [
    "0xmad <0xmad@users.noreply.github.com>",
    "Rob Ede <robjtede@icloud.com>",
]
description = "Rate limiter using a fixed window counter for arbitrary keys, backed by Redis for Actix Web"
keywords = ["actix-web", "rate-api", "rate-limit", "limitation"]
categories = ["asynchronous", "web-programming"]
repository = "https://github.com/actix/actix-extras.git"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = ["session"]
session = ["actix-session"]

[dependencies]
actix-utils = "3"
actix-web = { version = "4", features = ["cookies"] }

chrono = "0.4"
derive_more = "0.99.7"
log = "0.4"
redis = { version = "0.22", default-features = false, features = ["tokio-comp"] }
time = "0.3"

# session
actix-session = { version = "0.7", optional = true }

[dev-dependencies]
actix-web = "4"
static_assertions = "1"
uuid = { version = "1", features = ["v4"] }
