[package]
name = "actix-protobuf"
version = "0.10.0"
authors = [
    "kingxsp <jin.hb.zh@outlook.com>",
    "Yuki Okushi <huyuumi.dev@gmail.com>",
]
description = "Protobuf payload extractor for Actix Web"
keywords = ["actix", "web", "protobuf", "protocol", "rpc"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-extras.git"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
actix-web = { version = "4", default-features = false }
derive_more = "0.99.7"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
prost = { version = "0.12", default-features = false }

[dev-dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
prost = { version = "0.12", default-features = false, features = ["prost-derive"] }
