[package]
name = "actix-session"
version = "0.9.0"
authors = [
  "Nikolay Kim <fafhrd91@gmail.com>",
  "Luca Palmieri <rust@lpalmieri.com>",
]
description = "Session management for Actix Web"
keywords = ["http", "web", "framework", "async", "session"]
repository = "https://github.com/actix/actix-extras/tree/master/actix-session"
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = []
cookie-session = []
redis-session = ["dep:redis", "dep:rand"]
redis-session-native-tls = ["redis-session", "redis/tokio-native-tls-comp"]
redis-session-rustls = ["redis-session", "redis/tokio-rustls-comp"]
redis-dp-session = ["dep:deadpool-redis", "dep:rand"]

[dependencies]
actix-service = "2"
actix-utils = "3"
actix-web = { version = "4", default-features = false, features = ["cookies", "secure-cookies"] }

anyhow = "1"
derive_more = "0.99.7"
rand = { version = "0.8", optional = true }
serde = { version = "1" }
serde_json = { version = "1" }
tracing = { version = "0.1.30", default-features = false, features = ["log"] }

# redis-session
redis = { version = "0.25", default-features = false, features = ["tokio-comp", "connection-manager"], optional = true }

# redis-dp-session
deadpool-redis = { version = "0.14", optional = true }

[dev-dependencies]
actix-session = { path = ".", features = ["cookie-session", "redis-session"] }
actix-test = "0.1.0-beta.10"
actix-web = { version = "4", default-features = false, features = ["cookies", "secure-cookies", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.30"

[[example]]
name = "basic"
required-features = ["redis-session"]

[[example]]
name = "authentication"
required-features = ["redis-session"]
