[package]
name = "actix-settings"
version = "0.9.0"
authors = [
    "Joey Ezechiels <joey.ezechiels@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
description = "Easily manage Actix Web's settings from a TOML file and environment variables"
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
openssl = ["dep:openssl", "actix-web/openssl"]

[dependencies]
actix-http = "3"
actix-service = "2"
actix-web = { version = "4", default-features = false }
derive_more = { version = "2", features = ["display", "error"] }
once_cell = "1.21"
openssl = { version = "0.10", features = ["v110"], optional = true }
regex = "1.11"
serde = { version = "1", features = ["derive"] }
toml = "0.9"

[dev-dependencies]
actix-web = "4"
env_logger = "0.11"

[lints]
workspace = true
