[package]
name = "actix-web-httpauth"
version = "0.8.0"
authors = [
    "svartalf <self@svartalf.info>",
    "Yuki Okushi <huyuumi.dev@gmail.com>",
]
description = "HTTP authentication schemes for Actix Web"
keywords = ["http", "web", "framework", "authentication", "security"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-extras.git"
categories = ["web-programming::http-server"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
actix-utils = "3"
actix-web = { version = "4.1", default-features = false }

base64 = "0.21"
futures-core = "0.3.7"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
pin-project-lite = "0.2.7"

[dev-dependencies]
actix-cors = "0.6"
actix-service = "2"
actix-web = { version = "4.1", default-features = false, features = ["macros"] }
